--- a/COG_country_labels_HH2_Distance_aug.html
+++ b/COG_country_labels_HH2_Distance_aug.html
@@ -1735,7 +1735,7 @@
                 });
             }
         }
-        //console.log("Finished:", data);
+        //console.log("Finished:", data); no va
         return data;
     }
 
